--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -60,10 +60,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dm1hT_B9jXGu",
-        "outputId": "7cdd07fa-7933-42f1-df5a-6927dec0e019",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7cdd07fa-7933-42f1-df5a-6927dec0e019"
       },
       "source": [
         "3 + 2         # addition"
@@ -86,10 +86,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sUhkQPuhXbYj",
-        "outputId": "ca59f34b-bf78-4158-9008-9fb31ab2f611",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca59f34b-bf78-4158-9008-9fb31ab2f611"
       },
       "source": [
         "3 - 2         # subtraction"
@@ -112,10 +112,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "B1gLBI1LXo1m",
-        "outputId": "f56fac6e-c3db-4aa5-d3de-9d07bf796b73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f56fac6e-c3db-4aa5-d3de-9d07bf796b73"
       },
       "source": [
         "5 * 3         # multiplication"
@@ -138,10 +138,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TwvpedNVXzRc",
-        "outputId": "fbf3dcc0-22ed-4435-da67-b0a0bcec6852",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fbf3dcc0-22ed-4435-da67-b0a0bcec6852"
       },
       "source": [
         "7 / 2         # division (always returns a float)"
@@ -164,10 +164,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2LQZZcRPX5Bt",
-        "outputId": "4304426b-3373-453e-ceee-99fd012c2604",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4304426b-3373-453e-ceee-99fd012c2604"
       },
       "source": [
         "type (7 / 2)"
@@ -190,10 +190,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qjJkqqXcX95p",
-        "outputId": "372f4d93-5c04-45f7-8c15-1173fff7dcd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "372f4d93-5c04-45f7-8c15-1173fff7dcd9"
       },
       "source": [
         "7 // 2        # floor division (returns an integer - discards decimal part)"
@@ -216,10 +216,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2L_ku8CLYKDC",
-        "outputId": "fc783de9-0930-4bf0-ae71-0ea363a5e0d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fc783de9-0930-4bf0-ae71-0ea363a5e0d7"
       },
       "source": [
         "type ( 7 // 2)"
@@ -242,10 +242,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dH2NmrgNYM97",
-        "outputId": "60fdabbf-9048-4e71-b682-8652074988df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "60fdabbf-9048-4e71-b682-8652074988df"
       },
       "source": [
         "7 % 2         # modulus operator - remainder is fetched after division"
@@ -268,10 +268,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wNTJter-YZ7W",
-        "outputId": "44020dbf-afeb-4a19-aa2a-96d3aea286d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "44020dbf-afeb-4a19-aa2a-96d3aea286d4"
       },
       "source": [
         "7 ** 2        # exponentiation "
@@ -294,10 +294,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "asikDVm7YvYT",
-        "outputId": "f31cbea9-87ba-489c-d215-a5392374b2d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f31cbea9-87ba-489c-d215-a5392374b2d0"
       },
       "source": [
         "5 - 2 * 2     # operator precedence : (), **, -(unary),  * or /, + or -"
@@ -333,11 +333,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "oYu_ynPOeS2_",
-        "outputId": "900ff95a-49b7-4506-992b-8552d1575d8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "900ff95a-49b7-4506-992b-8552d1575d8f"
       },
       "source": [
         "first_name + second_name"
@@ -363,11 +363,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "oIY8q8wgehFC",
-        "outputId": "e00b54cc-8360-44f6-bc3f-1b2b14542c45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "e00b54cc-8360-44f6-bc3f-1b2b14542c45"
       },
       "source": [
         "first_name + ' ' + second_name"
@@ -393,11 +393,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6Vuv8iMbevRJ",
-        "outputId": "4c16b379-969a-46fe-9a68-bb87a681b6a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "4c16b379-969a-46fe-9a68-bb87a681b6a2"
       },
       "source": [
         "first_name * 2"
@@ -423,11 +423,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "QPblckrXe2ui",
-        "outputId": "9ade196e-264b-4b6e-b41b-c8e2f77f66c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "9ade196e-264b-4b6e-b41b-c8e2f77f66c2"
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
@@ -476,10 +476,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pKZ7uDHCZ3At",
-        "outputId": "a03c6185-ea46-4a42-a22e-b2c72186ccd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a03c6185-ea46-4a42-a22e-b2c72186ccd5"
       },
       "source": [
         "brick_volume = brick_length*brick_breadth*brick_height\n",
@@ -500,10 +500,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "S2zZsoBb2z45",
-        "outputId": "1f4c01c0-6497-4e0e-ad4f-2ce89776d41b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1f4c01c0-6497-4e0e-ad4f-2ce89776d41b"
       },
       "source": [
         "# 2. What will the expression -3 ** 2 evaluate to ?\n",
@@ -538,34 +538,33 @@
         "id": "V3hDQlq8J_bk"
       },
       "source": [
-        "pertrol_cost=102\n",
+        "petrol_cost=102\n",
         "mileage=38\n",
-        "price=50"
+        "fuel_worth=50"
       ],
-      "execution_count": 30,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fZ4Tpi0B27lf",
-        "outputId": "43284d25-e051-4e30-948a-e02f5cbf28d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d340c4e4-36f0-4d59-b7c9-0a5d5155f6c1"
       },
       "source": [
-        "\n",
-        "distance=(mileage*price)/pertrol_cost\n",
-        "print(distance)"
+        "distance = (mileage/petrol_cost)*fuel_worth\n",
+        "print(\"distance you can travel by worth of rs 50 :\",round(distance,2))\n"
       ],
-      "execution_count": 31,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "18.627450980392158\n"
+            "distance you can travel by worth of rs 50 : 18.63\n"
           ]
         }
       ]
