--- a/04_Conditional_Statement.ipynb
+++ b/04_Conditional_Statement.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/santhosh201cali/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,11 +60,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eDT9R8AOqnsz"
+        "id": "sRxXHs74kRej"
       },
       "source": [
-        "a = input(\"Enter an integer a: \")\n",
-        "type(a)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -72,31 +71,121 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbOsmJaIqiIP"
+        "id": "eDT9R8AOqnsz",
+        "outputId": "af656682-16a0-45a4-a790-f6865971e9aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a =input(\"Enter an integer a: \"  )\n",
+        "type(a)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 111\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gbOsmJaIqiIP",
+        "outputId": "617aa990-1f3e-4422-a0a2-b0403dadaf1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = int(a)\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8D8fTIoYqdGE"
+        "id": "8D8fTIoYqdGE",
+        "outputId": "1b9dd793-525e-43ef-f947-209ccb3f2201",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer b: 112\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cehfXMvowN0S"
+        "id": "F9_EtIS1jqOZ",
+        "outputId": "9026932f-49ac-4420-c519-a8cacb89e89c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\n",
+        "# type(b)\n",
+        "print(type(b))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cehfXMvowN0S",
+        "outputId": "2862715c-d3ba-408d-8ef8-5d22d6aeac15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a > b):\n",
@@ -108,8 +197,17 @@
         "else:\n",
         "  print (\"a is neither greater than b,  nor less than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is greater than b\n",
+            "and that's it\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +221,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZF-tcVscuADN"
+        "id": "ZF-tcVscuADN",
+        "outputId": "d116da73-cdab-4705-da53-5f2f99c0bfe5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -131,19 +233,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 123\n",
+            "Enter an integer b: 152\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N2E5veph8_9V"
+        "id": "N2E5veph8_9V",
+        "outputId": "d82283f6-71d7-47d9-c4d3-3b0e974e896c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a < b): print (\"a is lesser than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is lesser than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,7 +280,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SwO5vZ8LxGMA"
+        "id": "SwO5vZ8LxGMA",
+        "outputId": "13f70811-1ff0-45fa-dcba-4955c24a48fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -165,19 +292,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 12\n",
+            "Enter an integer b: 15\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-SLed6y6xJoq"
+        "id": "-SLed6y6xJoq",
+        "outputId": "2c7730e3-445c-474d-a907-be56b2988c65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"a is less than b\") if (a < b) else print (\"a - {} is not less than b - {}.\".format(a, b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is less than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,25 +339,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JHGOgFs-vWbq"
+        "id": "JHGOgFs-vWbq",
+        "outputId": "b916af1c-38c9-4346-a0bc-f501c2bba67f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter first string: \")\n",
         "b = input (\"Enter second string: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter first string: hello\n",
+            "Enter second string: how are you\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgqqBPjAvLQx"
+        "id": "qgqqBPjAvLQx",
+        "outputId": "228918e0-9573-4506-b2f9-85c9b8c6cb4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"first string comes earlier\") if (a<b) else print (\"second string comes earlier\") if (b<a) else print (\"both strings are same\")  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first string comes earlier\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +396,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b_QjChOW2VJY"
+        "id": "b_QjChOW2VJY",
+        "outputId": "88775e63-77b2-46c9-91c3-a9b8946634ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Your program should come here"
+        "# Your program should come here\n",
+        "a=input(\"enter any char:\" )\n",
+        "b=[\"a\",\"e\",\"i\",\"o\",\"u\",\"A\",\"E\",\"I\",\"O\",\"U\"]\n",
+        "if a in b:\n",
+        "  print(\"this is vowel\")\n",
+        "else:\n",
+        "  print(\"this is constant \")\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter any char:a\n",
+            "this is vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
