--- a/05_Flow_control_statement_For_loop.ipynb
+++ b/05_Flow_control_statement_For_loop.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/santhosh201cali/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,15 +39,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lHexb1UAseK6"
+        "id": "lHexb1UAseK6",
+        "outputId": "bacb8cde-2c9e-407e-cd86-8099810e3f4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# range\n",
         "for i in range(9, 19, 3):\n",
         "  print (i, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 12 15 18 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,7 +73,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8YRJCPP2vVPe"
+        "id": "8YRJCPP2vVPe",
+        "outputId": "5c35db9c-d41c-4e07-f85f-8f47f99e5346",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# list\n",
@@ -69,8 +85,16 @@
         "for each_item in my_list:\n",
         "  print (each_item, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,19 +104,31 @@
       "source": [
         "my_list = ['a', 'e', 'i', 'o', 'u']\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lWRcH-oE0nr6"
+        "id": "lWRcH-oE0nr6",
+        "outputId": "1b4f275a-1a8e-48b3-cf4e-a60adb069416",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "test_char = input(\"Enter Character: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter Character: a\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -106,19 +142,31 @@
         "    test_result = 'vowel'\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FXsvQh-C1C-m"
+        "id": "FXsvQh-C1C-m",
+        "outputId": "c0b0b3be-09a4-482b-e99c-6be7e800180a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (test_result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,19 +178,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20,2)]"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbKt_IhW6Z4z"
+        "id": "IbKt_IhW6Z4z",
+        "outputId": "6d93558b-1dcf-4c8a-c051-e022c648171d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -154,19 +217,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20) if (number % 2 == 1)]"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ahswgAU_qBVR"
+        "id": "ahswgAU_qBVR",
+        "outputId": "d70c16bc-e807-44bf-a288-1dba0e439cb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -185,8 +263,33 @@
       "source": [
         "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HbupTZzP6w7e",
+        "outputId": "ba1650b3-9f2f-48b3-a1a4-ea4fbd92c247",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "numbers_list=[1,2,3,4]\n",
+        "squarinig_two_numbers=[numbers_list**2 for numbers_list in numbers_list]\n",
+        "print(squarinig_two_numbers)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
