--- a/06_While_Loop_Flow_Control.ipynb
+++ b/06_While_Loop_Flow_Control.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "06_While_Loop-Flow_Control.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk563422oH/zxR2Ev1gU9h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/06_While_Loop_Flow_Control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/santhosh201cali/fmml2021/blob/main/06_While_Loop_Flow_Control.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,21 +55,33 @@
       "source": [
         "i = 0"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BPjFgz1-wgvK"
+        "id": "BPjFgz1-wgvK",
+        "outputId": "cf90b009-edab-45d8-af82-5c1288aa35e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (i < 10):\n",
         "   print (i, end=\" \")\n",
         "   i = i + 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 2 3 4 5 6 7 8 9 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -91,13 +102,17 @@
       "source": [
         "a = b = 1"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8ADO1xTtxAdK"
+        "id": "8ADO1xTtxAdK",
+        "outputId": "ce7b0f81-2e8c-470c-f662-2f1c93c22058",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (b < 10000):\n",
@@ -105,8 +120,16 @@
         "    a = a + b\n",
         "    b = a + b"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 2584 4181 6765 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -116,7 +139,7 @@
       "source": [
         "my_str = '***********'"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -125,34 +148,79 @@
         "id": "ogXM0QWM44jO"
       },
       "source": [
-        "str_len = len(my_str)"
+        "str_len = len(my_str)\n",
+        "# print(str_len)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rjpLoZPy5GF3"
+        "id": "rjpLoZPy5GF3",
+        "outputId": "5fe93ffd-25bc-4f92-fa7d-716bc9740306",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "while (str_len > 0):\n",
         "   print (my_str[:str_len])\n",
         "   str_len = str_len - 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "***********\n",
+            "**********\n",
+            "*********\n",
+            "********\n",
+            "*******\n",
+            "******\n",
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "prvBHO7u7p-R"
+        "id": "prvBHO7u7p-R",
+        "outputId": "b71e14eb-4a88-4dca-b5d3-31d1c58f77dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Exercise to print the pattern in increasing order"
+        "# Exercise to print the pattern in increasing order\n",
+        "n= int(input(\"enter no of rows :-\"))\n",
+        "for i in range(1,n+1):\n",
+        "    for j in range(1,i+1):\n",
+        "        print(\"*\",end=\" \")\n",
+        "    print()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter no of rows :-5\n",
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n"
+          ]
+        }
+      ]
     }
   ]
 }
