--- a/07_Defining_Functions.ipynb
+++ b/07_Defining_Functions.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/santhosh201cali/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,30 +39,76 @@
         "      return True\n",
         "  return False"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SLpNGCWYn6Er"
+        "id": "SLpNGCWYn6Er",
+        "outputId": "27deb0ce-08d6-4fda-bd1f-c0b76f48ce67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "inList('Z', ['x', 'y', 'z'])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r_KUNOW3rCc6"
+        "id": "APhcup_aZ1zy",
+        "outputId": "9d423232-040c-49db-cee0-9f0ddcd34af7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write a function to check whether a given number belongs to fibonacci series or not"
+        "# Write a function to check whether a given number belongs to fibonacci series or not\n",
+        "n=int(input(\"enter a number :- \"))\n",
+        "def fib(n):\n",
+        "    a,b=0,1\n",
+        "    for a in range (n):\n",
+        "        if a<n:\n",
+        "            print(a,end=\" \")\n",
+        "            a,b=b,a+b\n",
+        "            print(\"yes it is a fibnoci series \")\n",
+        "        else:\n",
+        "            print(\"it is not a fiibnoci series\")\n",
+        "    print()\n",
+        "fib(n)\n",
+        "            \n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a number :- 5\n",
+            "0 yes it is a fibnoci series \n",
+            "1 yes it is a fibnoci series \n",
+            "2 yes it is a fibnoci series \n",
+            "3 yes it is a fibnoci series \n",
+            "4 yes it is a fibnoci series \n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
